[reg-machine/Makefile] Cross-compile to wasm

--- a/reg-machine/Makefile
+++ b/reg-machine/Makefile
@@ -2,14 +2,21 @@ SRCS = gc.cpp instr.cpp machine.cpp op.cpp types.cpp parser.cpp main.cpp
 HDRS = gc.h instr.h machine.h op.h types.h parser.h
 
 OBJS = $(SRCS:.cpp=.o)
+WASM_OBJS = $(SRCS:.cpp=.owasm)
 
 CXXFLAGS = -std=c++17
 
 all: $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) -o reg-machine.out
 
-%.o: %.c
+%.o: %.cpp
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 clean:
 	rm *.o *.out
+
+all-wasm: $(WASM_OBJS)
+	emcc $(CXXFLAGS) $(WASM_OBJS) -o reg-machine.outwasm
+
+%.owasm: %.cpp
+	emcc -c $(CXXFLAGS) $< -o $@
