[reg-machine] Implement compiled procedures

--- a/reg-machine/Makefile
+++ b/reg-machine/Makefile
@@ -1,5 +1,5 @@
-SRCS = env.cpp gc.cpp instr.cpp machine.cpp op.cpp types.cpp parser.cpp main.cpp primitive-procs.cpp
-HDRS = env.h gc.h instr.h machine.h op.h types.h parser.h primitive-procs.h
+SRCS = compiled-proc.cpp env.cpp gc.cpp instr.cpp machine.cpp op.cpp types.cpp parser.cpp main.cpp primitive-procs.cpp
+HDRS = compiled-proc.h env.h gc.h instr.h machine.h op.h types.h parser.h primitive-procs.h
 
 OBJS = $(SRCS:.cpp=.o)
 WASM_OBJS = $(SRCS:.cpp=.owasm)
