[demo] Updated demo to use webpack

--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -1,6 +1,15 @@
-# Include your project-specific ignores in this file
-# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-# Useful .gitignore templates: https://github.com/github/gitignore
+# dependencies
 node_modules
-dist
-.cache
+
+# production
+build
+
+# misc
+.DS_Store
+
+npm-debug.log
+yarn-error.log
+yarn.lock
+.yarnclean
+.vscode
+.idea
