--- a/demo/package.json
+++ b/demo/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.20.3"
+    "core-js": "^3.20.3",
+    "es6-promise": "^4.2.8"
   }
 }
